# automatic-garbanzo

./: .gitignore  Makefile  README.md  a_lws_orig_onnx_letterboxingEnabled.npy  commands.txt  cuda_utils.h  logging.h  macros.h  myModule.c  myModule.c_backup  setup.py
images/: 299.json  list2npyandCheck.py  vsig_trt_1.npy  vsig_trt_2.npy  vsig_trt_3.npy  vsig_trt_4.npy  vsig_trt_5.npy
preprocess_test/: CMakeLists.txt  preprocess.cu  preprocess.h
tests/: test.py  test_bcc_classifier.py  test_leakage.py  test_person_reid.py  test_reid_cosine.py  test_vehicle_color.py  test_vehicle_make.py  test_vehicle_reidv10.py
